
5.82  2015-02-22
  - Deprecated keep_alive_requests setting in Hypnotoad in favor of requests.
  - Improved Morbo to restart slightly faster.

5.81  2015-02-20
  - Deprecated object-oriented Mojo::Loader API.
  - Added data_section, file_is_binary, load_class and find_modules functions
    to Mojo::Loader.
  - Improved design of built-in templates.
  - Fixed test command to not let Test::Harness enable global warnings by
    default. (OlegG)

5.80  2015-02-18
  - Deprecated Mojo::IOLoop::accept_interval, Mojo::IOLoop::lock and
    Mojo::IOLoop::unlock.
  - Deprecated Mojo::Server::Prefork::accept_interval,
    Mojo::Server::Prefork::lock_file and Mojo::Server::Prefork::lock_timeout.
  - Removed -a/--accept-interval, --lock-file and -L/--lock-timeout options
    from prefork command.
  - Removed accept_interval, lock_file and lock_timeout settings from
    Hypnotoad.
  - Added stop_gracefully method to Mojo::IOLoop.
  - Added finish event to Mojo::IOLoop.
  - Reduced CPU usage of Mojo::IOLoop and Mojo::Server::Prefork significantly.
  - Improved app generator command to use current best practices.
  - Fixed bug where semicolons at the end of a cookie were not parsed
    correctly. (dmw397)
  - Fixed bug in Mojo::IOLoop where connection limits were not properly
    enforced.
  - Fixed url_for to handle paths without trailing slash correctly in embedded
    applications.

5.79  2015-02-13
  - Fixed bug in Mojo::Reactor::Poll that caused excessive idle CPU usage.

5.78  2015-02-12
  - Replaced expires method in Mojo::Cookie::Response with an attribute.
  - Added split_cookie_header function to Mojo::Util.
  - Updated IO::Socket::SSL requirement to 1.94.
  - Relaxed RFC 822/1123 and RFC 850/1036 handling in Mojo::Date.
  - Improved Mojo::Reactor::Poll performance significantly.
  - Improved text method in Mojo::Message to use default_charset as well.
  - Improved design of built-in templates.
  - Fixed bug in Mojo::DOM that made parsing a requirement.