@@ -13,14 +13,14 @@ sub run {
 
   my $prefork = Mojo::Server::Prefork->new(app => $self->app);
   GetOptionsFromArray \@args,
-    'A|accepts=i'           => sub { $prefork->accepts($_[1]) },
-    'b|backlog=i'           => sub { $prefork->backlog($_[1]) },
-    'c|clients=i'           => sub { $prefork->max_clients($_[1]) },
-    'G|graceful-timeout=i'  => sub { $prefork->graceful_timeout($_[1]) },
-    'g|group=s'             => sub { $prefork->group($_[1]) },
-    'heartbeat-interval=i'  => sub { $prefork->heartbeat_interval($_[1]) },
-    'H|heartbeat-timeout=i' => sub { $prefork->heartbeat_timeout($_[1]) },
-    'i|inactivity=i'        => sub { $prefork->inactivity_timeout($_[1]) },
+    'A|accepts=i'            => sub { $prefork->accepts($_[1]) },
+    'b|backlog=i'            => sub { $prefork->backlog($_[1]) },
+    'c|clients=i'            => sub { $prefork->max_clients($_[1]) },
+    'G|graceful-timeout=i'   => sub { $prefork->graceful_timeout($_[1]) },
+    'g|group=s'              => sub { $prefork->group($_[1]) },
+    'heartbeat-interval=i'   => sub { $prefork->heartbeat_interval($_[1]) },
+    'H|heartbeat-timeout=i'  => sub { $prefork->heartbeat_timeout($_[1]) },
+    'i|inactivity-timeout=i' => sub { $prefork->inactivity_timeout($_[1]) },
     'l|listen=s'     => \my @listen,
     'multi-accept=i' => sub { $prefork->multi_accept($_[1]) },
     'P|pid-file=s'   => sub { $prefork->pid_file($_[1]) },
@@ -55,19 +55,19 @@ Mojolicious::Command::prefork - Prefork command
                                          accept, defaults to 1000
     -b, --backlog <size>                 Listen backlog size, defaults to
                                          SOMAXCONN
-    -c, --clients <number>               Maximum number of concurrent clients,
-                                         defaults to 1000
+    -c, --clients <number>               Maximum number of concurrent
+                                         connections, defaults to 1000
     -G, --graceful-timeout <seconds>     Graceful timeout, defaults to 20.
     -g, --group <name>                   Group name for process
         --heartbeat-interval <seconds>   Heartbeat interval, defaults to 5
     -H, --heartbeat-timeout <seconds>    Heartbeat timeout, defaults to 20
-    -i, --inactivity <seconds>           Inactivity timeout, defaults to the
+    -i, --inactivity-timeout <seconds>   Inactivity timeout, defaults to the
                                          value of MOJO_INACTIVITY_TIMEOUT or
                                          15
     -l, --listen <location>              One or more locations you want to
                                          listen on, defaults to the value of
                                          MOJO_LISTEN or "http://*:3000"
-        --multi-accept <number>          Number of connection to accept at
+        --multi-accept <number>          Number of connections to accept at
                                          once, defaults to 50
     -P, --pid-file <path>                Path to process id file, defaults to
                                          a random file
